[gd_scene load_steps=7 format=3 uid="uid://crq7bhcxp75lf"]

[ext_resource type="Script" path="res://fruit.gd" id="1_7c1c3"]
[ext_resource type="Texture2D" uid="uid://cew0hj33apkj7" path="res://icon.svg" id="1_17ply"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e8csd"]
size = Vector2(128, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jo4c0"]
size = Vector2(128, 128)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_k2rm7"]
light_mode = 1

[sub_resource type="SphereMesh" id="SphereMesh_ivvei"]
radius = 20.302
height = 36.643

[node name="fruit" type="RigidBody2D" groups=["fruit"]]
script = ExtResource("1_7c1c3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(64, 64)
shape = SubResource("RectangleShape2D_e8csd")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.352941)
texture = ExtResource("1_17ply")
centered = false

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(64, 64)
shape = SubResource("RectangleShape2D_jo4c0")

[node name="poly_container" type="Node2D" parent="."]

[node name="slice_container" type="Node2D" parent="."]
visible = false

[node name="Line2D" type="Line2D" parent="slice_container"]
points = PackedVector2Array(20, -89, 219, -91, 393, -73)
texture_mode = 1

[node name="MeshInstance2D" type="MeshInstance2D" parent="slice_container"]
material = SubResource("CanvasItemMaterial_k2rm7")
position = Vector2(131, -34)
mesh = SubResource("SphereMesh_ivvei")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
